Webpack Basic Setup
* Dev server to serve
* Build for prod
* Cleaning dist folder
* JS caching prevention with hash in filenames
* Source maps for dev debugging

--- a/src/index.html
+++ b/src/index.html
@@ -2,9 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Asset Management</title>
   </head>
   <body>
-    <script src="bundle.js"></script>
+      Test
   </body>
 </html>
