--- a/src/index.html
+++ b/src/index.html
@@ -1,9 +1,16 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-  </head>
-  <body>
-      Test
-  </body>
+
+<head>
+  <meta charset="utf-8" />
+</head>
+
+<body>
+  Test
+  <button class="mdc-button">
+    <div class="mdc-button__ripple"></div>
+    <span class="mdc-button__label">Text Button</span>
+  </button>
+</body>
+
 </html>
