--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,7 @@
       magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
       consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
       Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-    <!-- <img src="./res/icon.png" /> -->
+    <img src="./icon.png" /> 
   </main>
 </body>
 
