--- a/src/second_page.html
+++ b/src/second_page.html
@@ -7,6 +7,7 @@
 
 <body>
   <main>
+    <%= require('html-loader!/src/partials/top-bar.html') %>
     <p>second</p>
     <div class="mdc-touch-target-wrapper">
       <button class="mdc-button mdc-button--touch">
