--- a/src/home/home.html
+++ b/src/home/home.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 </head>
 
-<body>
+<body class="mdc-theme--primary-bg">
     <main>
         <section id="container" class="container">
             <%= require('html-loader!/src/partials/top-bar.html') %>
@@ -18,6 +18,10 @@
             pariatur.
             Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
             laborum.</p>
+        <div class="mdc-card">
+            <!-- ... content ... -->
+            content
+        </div>
     </main>
 </body>
 
