using themes properly to set bg

--- a/src/home/home.html
+++ b/src/home/home.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 </head>
 
-<body class="mdc-theme--primary-bg">
+<body>
     <main>
         <section id="container" class="container">
             <%= require('html-loader!/src/partials/top-bar.html') %>
